Closed Bug 1053078 Opened 11 years ago Closed 11 years ago

ASAP mode breaks refresh driver throttling

Categories

(Core :: Layout, defect)

29 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

(Whiteboard: [talos_regression])

Attachments

(1 file)

The refresh driver throttling code has a safety mechanism where we unblock painting if we get 10 refresh driver ticks while frozen. This exists to stop us getting deadlocked if a response from the compositor gets lost somehow. ASAP mode (where we trigger refresh driver ticks as fast as possible) breaks this since we accumulate the 10 ticks almost immediately, even when the compositor is responding normally. We use this mode for most of our talos test, so the results (particularly on OSX) will likely appear to regress when we fix this since we'll correctly be keeping content in sync with the compositor instead of overproducing.
Adding avih and jmaher to the cc list since this is going to show up as a talos regression.
Assignee: nobody → matt.woodrow
Attachment #8472173 - Flags: review?(roc)
Blocks: 983035
(In reply to Matt Woodrow (:mattwoodrow) from comment #1) > Adding avih and jmaher to the cc list since this is going to show up as a > talos regression. Do you know this for a fact? Last time I tried I couldn't notice overproduction IIRC with tscrollx (can't find the bug where I said it though, but I do recall roc was part of the conversation as well).
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Matt, thanks for including us on this bug. I see 3 regressions from this change: 10.8 tscrollx 339% 10.8 tart 9.2% 10.6 tscrollx 202% as this change landed with 2 other patches (http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f9c51223ffc9&tochange=76d4e6230498), it is possible that another patch caused the tart regression. here is a graph for 10.6: http://graphs.mozilla.org/graph.html#tests=[[287,63,21]]&sel=1407987418000,1408160218000&displayrange=7&datatype=running Is this the expected behavior from this patch?
Flags: needinfo?(matt.woodrow)
Yeah that's expected, any test that uses ASAP mode would potentially be affected.
Flags: needinfo?(matt.woodrow)
Thanks Matt, appreciate the heads up and reply!
Blocks: 1042202
Whiteboard: [talos_regression]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: