Bug 1053078 - Use a timeout instead of tick count for preventing refresh driver hangs since ASAP mode accumulates tick counts too quickly. r=roc